@@ -1,5 +1,10 @@
 2005-06-28  Nathaniel Smith  <njs@codesourcery.com>
 
+	* netsync.cc: Update low-level functions to use include_pattern
+	and exclude_pattern.
+
+2005-06-28  Nathaniel Smith  <njs@codesourcery.com>
+
 	* netcmd.{cc,hh} (read_anonymous_cmd, write_anonymous_cmd)
 	(read_auth_cmd, write_auth_cmd): Take include_pattern and
 	exclude_pattern arguments.
